<resources>

    <string name="app_name">TecAir</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_register">Register</string>
    <string name="login_button">Login</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_lname1">Apellido 1</string>
    <string name="hint_lname2">Apellido 2</string>
    <string name="hint_email">Email</string>
    <string name="hint_cedula">Cedula</string>
    <string name="hint_tipo">Tipo</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="hint_date">dd/mm/aaaa</string>
    <string name="hint_numpass">Numero de pasajeros</string>
    <string name="text_promos">Promociones</string>
    <string name="text_flights">Vuelos</string>
    <string name="hint_codigo">Codigo</string>
    <string name="hint_descuento">Descuento</string>
    <string name="hint_vencimiento">Vencimiento</string>
    <string name="hint_id">ID</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_costo">Costo</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>